--- a/index.html
+++ b/index.html
@@ -20,7 +20,46 @@
     </div>
     <div>
       <img src="images/temple-of-artemis.jpg" alt="">
-
-
+    </div>
+    <div>
+      <h2>Temple of Artemis</h2>
+      <dl>
+        <dt>Date of construction</dt>
+        <dd>Circa 550 BC</dd>
+        <dt>Builders</dt>
+        <dd>Greeks</dd>
+        <dt>Location</dt>
+        <dd>Selçuk, Turkey</dd>
+      </dl>
+    </div>
+    <div>
+      <img src="colossus-of-rhodes.jpg" alt="">
+    </div>
+    <div>
+      <h2>Colossus of Rhodes</h2>
+      <dl>
+        <dt>Date of construction</dt>
+        <dd>292–280 BC</dd>
+        <dt>Builders</dt>
+        <dd>Greeks</dd>
+        <dt>Location</dt>
+        <dd>Rhodes, Greece</dd>
+      </dl>
+    </div>
+    <div>
+      <img src="hanging-gardens-of-babylon" alt="">
+    </div>
+    <div>
+      <h2>Hanging Gardens of Babylon</h2>
+      <dl>
+        <dt>Date of construction</dt>
+        <dd>Circa 600 BC</dd>
+        <dt>Builders</dt>
+        <dd>Babylonians</dd>
+        <dt>Location</dt>
+        <dd>Nineveh, Iraq</dd>
+      </dl>
+    </div>
+  </div>
 </body>
 </html>
