--- a/index.html
+++ b/index.html
@@ -10,53 +10,51 @@
 </head>
 <body>
   <div class="grid">
-    <div>
-      <img src="images/wonders-of-the-world.jpg" alt="">
-    </div>
-    <div>
+    <div class="unit">
+      <img class="img-flex" src="images/wonders-of-the-world.jpg" alt="">
       <h1>The Seven Wonders of the Ancient World</h1>
       <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
       <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
     </div>
-    <div>
-      <img src="images/temple-of-artemis.jpg" alt="">
-    </div>
-    <div>
-      <h2>Temple of Artemis</h2>
+    <div class="unit">
+      <figure>
+        <img class="img-flex" src="images/temple-of-artemis.jpg" alt="">
+        <figcaption>Temple of Artemis</figcaption>
+      </figure>
       <dl>
-        <dt>Date of construction</dt>
+        <dt>Date of construction:</dt>
         <dd>Circa 550 BC</dd>
-        <dt>Builders</dt>
+        <dt>Builders:</dt>
         <dd>Greeks</dd>
-        <dt>Location</dt>
+        <dt>Location:</dt>
         <dd>Selçuk, Turkey</dd>
       </dl>
     </div>
-    <div>
-      <img src="colossus-of-rhodes.jpg" alt="">
-    </div>
-    <div>
-      <h2>Colossus of Rhodes</h2>
+    <div class="unit">
+      <figure>
+        <img class="img-flex" src="colossus-of-rhodes.jpg" alt="">
+        <figcaption>Colossus of Rhodes</figcaption>
+      </figure>
       <dl>
-        <dt>Date of construction</dt>
+        <dt>Date of construction:</dt>
         <dd>292–280 BC</dd>
-        <dt>Builders</dt>
+        <dt>Builders:</dt>
         <dd>Greeks</dd>
-        <dt>Location</dt>
+        <dt>Location:</dt>
         <dd>Rhodes, Greece</dd>
       </dl>
     </div>
-    <div>
-      <img src="hanging-gardens-of-babylon" alt="">
-    </div>
-    <div>
-      <h2>Hanging Gardens of Babylon</h2>
+    <div class="unit">
+      <figure>
+        <img class="img-flex" src="hanging-gardens-of-babylon" alt="">
+        <figcaption>Hanging Gardens of Babylon</figcaption>
+      </figure>
       <dl>
-        <dt>Date of construction</dt>
+        <dt>Date of construction:</dt>
         <dd>Circa 600 BC</dd>
-        <dt>Builders</dt>
+        <dt>Builders:</dt>
         <dd>Babylonians</dd>
-        <dt>Location</dt>
+        <dt>Location:</dt>
         <dd>Nineveh, Iraq</dd>
       </dl>
     </div>
