--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
   <meta charset="utf-8">
   <title>Ugly Grid</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="grid.css" rel="stylesheet">
-  <link href="main.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
 </head>
 <body>
   <div class="grid">
-    <div class="unit">
-      <figure>
-        <img class="img-flex" src="images/wonders-of-the-world.jpg" alt="">
-        <figcaption>
-          <h1>The Seven Wonders of the Ancient World</h1>
-          <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
-          <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-        </figcaption>
-      </figure>
+    <div class="unit xs-1 s-1 m-1 l-2-3">
+      <img class="img-flex" src="images/wonders-of-the-world.jpg" alt="">
     </div>
-    <div class="unit">
+    <div class="unit xs-1 s-1 m-1 l-1-3">
+      <h1>The Seven Wonders of the Ancient World</h1>
+      <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
+      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3">
       <figure>
         <img class="img-flex" src="images/temple-of-artemis.jpg" alt="">
         <figcaption>
@@ -36,9 +34,9 @@
         </figcaption>
       </figure>
     </div>
-    <div class="unit">
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
       <figure>
-        <img class="img-flex" src="colossus-of-rhodes.jpg" alt="">
+        <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="">
         <figcaption>
           <h2>Colossus of Rhodes</h2>
           <dl>
@@ -52,9 +50,9 @@
         </figcaption>
       </figure>
     </div>
-    <div class="unit">
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
       <figure>
-        <img class="img-flex" src="hanging-gardens-of-babylon" alt="">
+        <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
         <figcaption>
           <h2>Hanging Gardens of Babylon</h2>
           <dl>
